--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "build": "babel src -d lib"
   },
   "dependencies": {
+    "canvas-to-image": "^2.0.0",
     "chart.js": "^2.5.0",
+    "dom-to-image": "^2.5.2",
+    "jquery": "^3.2.1",
+    "jsdom": "^9.12.0",
+    "json-file": "^0.1.0",
+    "jsonfile": "^2.4.0",
     "mathjs": "^3.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-preset-env": "^1.2.2"
+    "babel-preset-env": "^1.2.2",
+    "webpack": "^2.3.3"
   }
 }
